# stm32g0b1

./: .cmake-format.py  .gitignore  .justfile  .pre-commit-config.yaml  CMakeLists.txt  Dockerfile  LICENSE  entrypoint.sh  makefile  readme.md  stm32g0b1_gcc.make
.github/workflows/: examples.yml
cmake/: CPM.cmake  readme.md
examples/I2C_target/: CMakeLists.txt  makefile  st_nucleo_g0.cfg
examples/I2C_target/cmake/toolchains/: arm-none-eabi-gnu.cmake  arm-none-eabi-llvm.cmake  warnings-llvm.cmake
examples/blinky_nucleo/: CMakeLists.txt  makefile  stand-alone.ld
examples/blinky_nucleo/cmake/: warnings-llvm.cmake
examples/blinky_nucleo/cmake/toolchains/: arm-none-eabi-gnu.cmake  arm-none-eabi-llvm.cmake  warnings-llvm.cmake
examples/blinky_nucleo/src/: main.c
include/stm32g0b1/: arm_m0_plus.h  device_memory.h  i2c.h  stm32g0b1.h  stm_adc.h  stm_basic_timer.h  stm_dma1.h  stm_dmamux.h  stm_flash.h  stm_gp_timer.h  stm_gpio.h  stm_i2c.h  stm_lptimer1.h  stm_nvic.h  stm_rcc.h  stm_reset.h  stm_scb.h  stm_spi.h  stm_systick.h  stm_timer1.h  stm_usart.h  stm_vrefbuf.h  uart.h  usb.h
src/: i2c.c  stm32g0b1.c  stm_adc.c  stm_flash.c  stm_nvic.c  stm_reset.c  stm_vrefbuf.c  timeout_macros.h  uart.c
